Mostly clean up and adapting to near abstractions. Paving the way for bigger refactors